reading config params into Map and generating Json Map of data format

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,13 +1,23 @@
-local{
+local {
   ROWS_PER_FILE = 100000
   DATA_FORMAT {
-    "data": "Option[String]"
-    "label" : "Option[String]"
-    "column_header": "Option[String]"
-    "column_description" : "String"
-    "breakdown":"Array[Map[String,String]]"
-  }
-  dev{
-
+    "data":{
+      "action":"value"
+      "type":"String"
+    }
+    "label":{
+      "action":"label"
+      "type":"String"
+    }
+    "column_header":{
+      "action":"column"
+      "type":"String"
+    }
+    "column_description":{
+      "action":"description"
+      "type":"String"
+    }
+    
   }
 }
+
