--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,20 +4,46 @@ local {
     "data":{
       "action":"value"
       "type":"String"
+      "parts":[]
     }
     "label":{
       "action":"label"
       "type":"String"
+      "parts":[]
     }
     "column_header":{
       "action":"column"
       "type":"String"
+      "parts":[]
     }
     "column_description":{
       "action":"description"
       "type":"String"
+      "parts":[]
     }
-    
+    "breakdown": {
+      "action": "decomposition"
+      "type": "Vector[Map[String,String]"
+      "parts" : {
+        "field": "sub_label"
+        "string" : "None"
+      }
+//        {
+//          "field":{
+//            "action":"sub_label"
+//            "type":"String"
+//            "parts":[]
+//          }
+//          "string":{
+//            "action":"None"
+//            "type":"String"
+//            "parts":[]
+//          }
+//        }
+
+    }
+
+
   }
 }
 
