working user inpu from config, but code needs refactoring

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,23 +24,20 @@ local {
     "breakdown": {
       "action": "decomposition"
       "type": "Vector[Map[String,String]"
-      "parts" : {
-        "field": "sub_label"
-        "string" : "None"
-      }
-//        {
-//          "field":{
-//            "action":"sub_label"
-//            "type":"String"
-//            "parts":[]
-//          }
-//          "string":{
-//            "action":"None"
-//            "type":"String"
-//            "parts":[]
-//          }
-//        }
-
+      "parts" : [
+        {
+          "field":{
+            "action":"sub_label"
+            "type":"String"
+            "parts":[]
+          }
+          "data":{
+            "action":"no_value"
+            "type":"String"
+            "parts":[]
+          }
+        }
+      ]
     }
 
 
