--- a/src/main/resources/user-input.conf
+++ b/src/main/resources/user-input.conf
@@ -1,42 +1,42 @@
-local{
-     DATA_FORMAT {
-        "data":{
-          "action":"value"
-          "type":"String"
-          "parts":[]
+user-input{
+  DATA_FORMAT {
+    "data":{
+      "action":"value"
+      "type":"String"
+      "parts":[]
+    }
+    "label":{
+      "action":"label"
+      "type":"String"
+      "parts":[]
+    }
+    "column_header":{
+      "action":"column"
+      "type":"String"
+      "parts":[]
+    }
+    "column_description":{
+      "action":"description"
+      "type":"String"
+      "parts":[]
+    }
+    "breakdown": {
+      "action": "decomposition"
+      "type": "Vector[Map[String,String]"
+      "parts" : [
+        {
+          "field":{
+            "action":"sub_label"
+            "type":"String"
+            "parts":[]
+          }
+          "data":{
+            "action":"no_value"
+            "type":"String"
+            "parts":[]
+          }
         }
-        "label":{
-          "action":"label"
-          "type":"String"
-          "parts":[]
-        }
-        "column_header":{
-          "action":"column"
-          "type":"String"
-          "parts":[]
-        }
-        "column_description":{
-          "action":"description"
-          "type":"String"
-          "parts":[]
-        }
-        "breakdown": {
-          "action": "decomposition"
-          "type": "Vector[Map[String,String]"
-          "parts" : [
-            {
-              "field":{
-                "action":"sub_label"
-                "type":"String"
-                "parts":[]
-              }
-              "data":{
-                "action":"no_value"
-                "type":"String"
-                "parts":[]
-              }
-            }
-          ]
-        }
-      }
+      ]
+    }
+  }
 }
