--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,22 +4,19 @@ local {
     "data":{
       "action":"value"
       "type":"String"
-      "components":[]
+
     }
     "label":{
-      "action":"label"
+      "action":"value"
       "type":"String"
-      "components":[]
     }
     "column_header":{
       "action":"column"
       "type":"String"
-      "components":[]
     }
     "column_description":{
       "action":"description"
       "type":"String"
-      "components":[]
     }
     "breakdown": {
       "action": "decomposition"
