--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,8 +1,8 @@
 test{
   aws{
     s3{
-      clientId = "AKIAJMVPH47YHSLXVXTA"
-      clientSecret = "fYHcmYjh+F2QCf/5q3nfx5yHV3g5x1wIcMV1TUyq"
+      clientId = 'YOUR_ACCESS_KEY"
+      clientSecret = "YOUR_SECRET_KEY"
     }
 
   }
